--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
   padding: 30px;
   margin: 0;
 }
+#tipoCirugia {
+  font-size: 14px;
+}
 @keyframes gradient {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
