--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
   font-family: 'Lato', sans-serif;
-  background: linear-gradient(-45deg,#e3f2fd,#bbdefb,#90caf9,#e1f5fe);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  background: #e9f0f5 url('https://www.transparenttextures.com/patterns/pw-maze-white.png');
+  background-size: auto;
   padding: 30px;
   margin: 0;
 }
+
 #tipoCirugia {
   font-size: 14px;
 }
