--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body {
   max-width: 1000px;
   margin: 20px auto;
 }
+body.fondo-dinamico {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 
 button, .btn-volver {
   display: inline-block;
